# pytorch-accelerated

./: .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  Dockerfile  LICENSE.txt  MANIFEST.in  PR_DESCRIPTION.md  README.md  pyproject.toml  requirements.dev.txt  requirements.examples.txt  requirements.txt  setup.cfg  setup.py  versioneer.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yaml
docs/: README.md  callbacks.rst  conf.py  fine_tuning.rst  index.rst  installation.rst  quickstart.rst  requirements_docs.txt  run_config.rst  schedulers.rst  tracking.rst  trainer.rst  utils.rst
example/: freezing_exploration.py  imagenette_resnetrs.py  train.py  train_advanced.py  train_metrics_in_callback.py  train_metrics_in_loop.py  train_timm.py
examples/: README.md  custom_callback_event.py  imagenette_resnetrs.py  progressive_resizing.py  train_mnist.py
examples/azureml/: accelerate_config.yaml  commands  config-working.yaml  config.yaml  environment.yaml  environment.yml  hf_nlp.py
examples/core/: custom_callback_event.py  train_mnist copy.py  train_mnist.py  train_with_metrics_in_callback.py  train_with_metrics_in_loop.py
examples/data/: download_ants_and_bees.sh  download_imagenette.sh  download_pets.sh
examples/metrics/: train_with_metrics_in_callback.py  train_with_metrics_in_loop.py
examples/nlp/: hf_bert_glue_mrpc.py
examples/vision/: lr_finder.py  train_mnist.py
pytorch_accelerated/: __init__.py  _version.py  callbacks.py  finetuning.py  freezing.py  run_config.py  tracking.py  trainer.py  utils.py
pytorch_accelerated/schedulers/: __init__.py  cosine_scheduler.py  scheduler_base.py  wsd_scheduler.py
pytorch_thunder/: callbacks.py  tracking.py  trainer.py
test/: finetuning.py  placeholders.py  run_history.py  test_finetuning.py  test_loss_tracking.py  test_placeholders.py  test_trainer.py  test_utils.py  trainer.py  utils.py
test/scheduler/: test_cosine_scheduler.py  test_wsd_scheduler.py  (+1 more)
(+31 files in other folders)
